# CFGBuilder

./: LICENSE  README.md
src/: CMakeLists.txt  Utils.h  main.cpp
src/CFG/SymbolicExecution/: SymbolicExecutionStack.cpp  SymbolicExecutionStack.h
src/CFG/cfgbuilder/: Cfg.h  CfgBuilder.cpp  CfgBuilder.h  CfgBuilderReport.h
src/CFG/contract/: Contract.h
src/SolidityInfo/: SolidityVersion.h
src/Utils/: JsonExporter.h  Message.h  Tools.h  utils.h
src/opcodes/: BasicBlock.h  BasicBlockType.h  Bytecode.h  BytecodeParser.h  Opcode.h  OpcodeID.h
src/opcodes/opcode/: ArithmeticOpcode.h  BlockOpcode.h  ControlFlowOpcode.h  EnvironmentalOpcode.h  InvalidOpcode.h  LogOpcode.h  StackOpcode.h  SystemOpcode.h
src/opcodes/opcode/ArithmeticOpcode/: BinaryArithmeticOpcode.h  TernaryArithmeticOpcode.h  UnaryArithmeticOpcode.h
src/opcodes/opcode/BlockOpcode/: BlockHashOpcode.h  ChainIdOpcode.h  CoinBaseOpcode.h  DifficultyOpcode.h  GasLimitOpcode.h  NumberOpcode.h  TimeStampOpcode.h
src/opcodes/opcode/ControlFlowOpcode/: JumpDestOpcode.h  JumpIOpcode.h  JumpOpcode.h  StopOpcode.h
src/opcodes/opcode/EnvironmentalOpcode/: AddressOpcode.h  BalanceOpcode.h  CallDataCopyOpcode.h  CallDataLoadOpcode.h  CallDataSizeOpcode.h  CallValueOpcode.h  CallerOpcode.h  CodeCopyOpcode.h  CodeSizeOpcode.h  ExtCodeCopyOpcode.h  ExtCodeHashOpcode.h  ExtCodeSizeOpcode.h  GasPriceOpcode.h  OriginOpcode.h  ReturnDataCopyOpcode.h  ReturnDataSizeOpcode.h  SelfBalanceOpcode.h
src/opcodes/opcode/StackOpcode/: DupOpcode.h  GasOpcode.h  MLoadOpcode.h  MSizeOpcode.h  MStore8Opcode.h  MStoreOpcode.h  (+6 more)
(+53 files in other folders)
